[package]
name = "pine-dns"
version = "0.2.0"
authors = ["Jai Veilleux"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"          # error handling
bytes = "1.3.0"            # helps manage buffers
thiserror = "1.0.38"       # error handling
nom = "7.1.3"              # parsing
rand = "0.8.5"             # randomness
